name:                waiwarpws
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/k-bx/waiwarpws#readme
license:             BSD3
license-file:        LICENSE
author:              Kostiantyn Rybnikov
maintainer:          k-bx@k-bx.com
copyright:           Kostiantyn Rybnikov &lt;k-bx@k-bx.com&gt;
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable waiwarpws
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010
  build-depends:       Crypto
                     , MissingH
                     , base >= 4.7 && < 5
                     , string-class
                     , text
                     , transformers
                     , websockets

executable load-test
  hs-source-dirs:      src
  main-is:             LoadTest.hs
  ghc-options:         -Wall -Werror
  default-language:    Haskell2010
  build-depends:       Crypto
                     , MissingH
                     , async
                     , base >= 4.7 && < 5
                     , deepseq
                     , enclosed-exceptions
                     , slave-thread
                     , string-class
                     , text
                     , transformers
                     , websockets
